[gd_scene load_steps=10 format=3 uid="uid://ca0ltxiefn77p"]

[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_5ljvg"]
[ext_resource type="PackedScene" uid="uid://cr1ixd8ryu4ed" path="res://UI/Camera/Camera.tscn" id="2_2bx26"]
[ext_resource type="PackedScene" uid="uid://cjsbj2qp2hca2" path="res://Entities/tools/draw_layer.tscn" id="2_jfk7s"]
[ext_resource type="Script" path="res://Entities/Player/ui.gd" id="4_c2snh"]
[ext_resource type="PackedScene" uid="uid://cg18po2rt30op" path="res://UI/Bars/bar.tscn" id="5_kjuru"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8vkar"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b51y7"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_twpoc"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2tgu8"]
radius = 14.0357

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 0.0
script = ExtResource("1_5ljvg")

[node name="Shadow" type="Polygon2D" parent="."]
color = Color(0.15, 0.15, 0.15, 1)
polygon = PackedVector2Array(0, 22, -12, 20, -21, 16, -12, 13, 0, 11, 11, 13, 21, 16, 11, 20)

[node name="DrawLayer" parent="." instance=ExtResource("2_jfk7s")]

[node name="ColorRect" type="ColorRect" parent="DrawLayer"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0

[node name="Camera2D" parent="DrawLayer" instance=ExtResource("2_2bx26")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8vkar")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0
default_color = Color(0, 0, 0, 1)

[node name="obj_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj_collider"]
shape = SubResource("CircleShape2D_b51y7")

[node name="WallDetectors" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="WallDetectors"]
target_position = Vector2(-40, 0)

[node name="Right" type="RayCast2D" parent="WallDetectors"]
target_position = Vector2(40, 0)

[node name="Up" type="RayCast2D" parent="WallDetectors"]
target_position = Vector2(0, -40)

[node name="Down" type="RayCast2D" parent="WallDetectors"]
target_position = Vector2(0, 40)

[node name="Hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_twpoc")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_2tgu8")

[node name="Remote" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_c2snh")

[node name="ColorRect" type="ColorRect" parent="UI"]
offset_left = 32.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="HealthBar" parent="UI" instance=ExtResource("5_kjuru")]
offset_left = 80.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 32.0
color = Color(0.2112, 0.88, 0.322667, 1)

[node name="Max" parent="UI/HealthBar" index="0"]
offset_right = 80.0

[node name="EnergyBar" parent="UI" instance=ExtResource("5_kjuru")]
offset_left = 80.0
offset_top = 48.0
offset_right = 80.0
offset_bottom = 48.0
color = Color(0.44, 0.617333, 1, 1)

[connection signal="area_entered" from="obj_collider" to="." method="_on_obj_collider_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]

[editable path="UI/HealthBar"]
